--- a/css/maker.css
+++ b/css/maker.css
@@ -113,6 +113,10 @@ textarea:focus {
   min-height: 80px;
 }
 
+
+
+
+
 .form-navigation {
   display: flex;
   justify-content: space-between;
@@ -210,7 +214,7 @@ textarea:focus {
 
 
 
-#step3Line{
+.addBtnLine{
   background: linear-gradient(135deg, #3fd3f8, var(--primary-color));
   color: var(--primary-color);
   width: 99%;
@@ -276,6 +280,20 @@ textarea:focus {
 }
 mark {
   background-color: lightblue !important;
+}
+
+
+
+#skillsEntered > div {
+  display: inline-block;
+  width: max-content;
+  background-color: rgb(147, 147, 245);
+  padding: 7px;
+  font-size: 1rem;
+  border-radius: 16px;
+  color: white;
+  margin-right: 5px;
+  cursor: pointer;
 }
 
 
