--- a/css/indexMobile.css
+++ b/css/indexMobile.css
@@ -91,4 +91,39 @@
     .footer a {
         font-size: 0.9rem;
     }
+
+
+    
+    .submitbtn button {
+        margin-top: 45px ; 
+    }
+
+    .btn1Ani{
+        animation: btnAni 1s ease-in-out alternate;
+        /* animation-delay: 1s; */
+        animation-iteration-count: 4;
+    }
+    
+    @keyframes btnAni {
+        from{
+            box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+        }
+        to{
+            box-shadow: 0 0 20px rgba(0, 123, 255, 1);
+            transform: translateY(-10px);
+        }
+    }
+    
+
+
+
+
+
+
+
+
+
+
+
+
 }
